--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-pandas
-matplotlib
-seaborn
-babel
+matplotlib==3.8.3
+pandas==2.2.3
+seaborn==0.13.2
+streamlit==1.42.2
+streamlit==1.43.1
